--- a/partials/api/hc.commonmark.service.commonMark.html
+++ b/partials/api/hc.commonmark.service.commonMark.html
@@ -9,6 +9,10 @@
 <h2 id="dependencies">Dependencies</h2>
 <ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/ng.$window">$window</a></code>
 </li>
+<li><code ng:non-bindable=""><a href="#/api/ng.$injector">$injector</a></code>
+</li>
+<li><code ng:non-bindable=""><a href="#/api/ng.$log">$log</a></code>
+</li>
 </ul>
 <h2 id="example">Example</h2>
 <div class="example"><div class="hc-commonmark-service-page hc-commonmark-service-commonmark-page"><h4 id="example_source">Source</h4>
